--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         path: ${{ steps.pester.outputs.logPath }}
 
     - name: Script is a file
-      run: '::set-env name=TestName::ScriptIsFile'
+      run: echo '::set-env name=ActionTest_ScriptIsAFile_script::test/sample/sample.tests.ps1'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -36,7 +36,7 @@ jobs:
         script: 'tests/sample/sample.tests.ps1'
 
     - name: Pass empty value for script
-      run: '::set-env name=TestName::ScriptNull'
+      run: echo '::set-env name=ActionTest_EmptyValueForScript_script::null'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -44,7 +44,7 @@ jobs:
         script: ''
 
     - name: Pass non existent path
-      run: '::set-env name=TestName::ScriptNotExist'
+      run: echo '::set-env name=ActionTest_NonExistentPath_script::tests/notexists'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -52,7 +52,7 @@ jobs:
         script: 'tests/notexists'
 
     - name: Pester version 5.0.0
-      run: '::set-env name=TestName::Pester500'
+      run: echo '::set-env name=ActionTest_PesterVersion5_version::5.0.0'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -60,7 +60,8 @@ jobs:
         version: '5.0.0'
 
     - name: Pester version 4.10.1
-      run: '::set-env name=TestName::Pester4101'
+      run: echo '::set-env name=ActionTest_PesterVersion4.10.1_version::4.10.1'
+
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -68,7 +69,7 @@ jobs:
         version: '4.10.1'
 
     - name: Pester non existing version
-      run: '::set-env name=TestName::PesterNonExistingVersion'
+      run: '::set-env name=TestName::ActionTest_NonExistingVersion_version::100.100.100'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -76,7 +77,7 @@ jobs:
         version: '100.100.100'
 
     - name: Pester version null
-      run: '::set-env name=TestName::PesterVersionNull'
+      run: '::set-env name=TestName::ActionTest_PesterVersionNull_version::null'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -84,7 +85,7 @@ jobs:
         version: ''
 
     - name: Pester version not number
-      run: '::set-env name=TestName::PesterVersionNotNumber'
+      run: '::set-env name=ActionTest_PesterVersionNotANumber_version::a.b.c'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -92,7 +93,7 @@ jobs:
         version: 'a.b.c'
 
     - name: Log format is NUnitXml
-      run: '::set-env name=TestName::LogFormatNUnitXml'
+      run: '::set-env name=ActionTest_LogFormatNUnitXml_logformat::NUnitXml'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
@@ -100,16 +101,9 @@ jobs:
         logformat: 'NUnitXml'
 
     - name: Log format is JUnitXml
-      run: '::set-env name=TestName::LogFormatJUnitXml'
+      run: '::set-env name=ActionTest_LogFormatJUnitXml_logformat::JUnitXml'
     - name: Pester Action
       id: pester
       uses: ./PesterActionV1
       with:
         logformat: 'JUnitXml'
-
-    - name: All defaults
-      run: '::set-env name=TestName::AllDefaults'
-    - name: Pester Action
-      id: pester
-      uses: ./PesterActionV1
-
